--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,18 @@
-<p><%= @message %></p>
+<h1>Law School Reporter API v1.0</h1>
+
+<h2>Endpoints</h2>
+
+<h3>Schools</h3>
+
+<% if @random_school %>
+
+<ul>
+  <li><%= link_to "List", api_v1_schools_path %></li>
+  <li><%= link_to "Show", api_v1_school_path(@random_school) %> (refresh this page to suffle)</li>
+</ul>
+
+<% else %>
+
+<p>Admin, please seed the database with some schools!</p>
+
+<% end %>
